pkg/provider/kubernetes/ingress/fixtures/Published-Service-Selector.yml
---
kind: Service
apiVersion: v1
metadata:
  name: published-service-cluster-ip
  namespace: default
  labels:
    app: traefik
spec:
  type: ClusterIP
  externalIPs:
    - 1.2.3.4
  ports:
    - port: 9090
      protocol: TCP
      name: first
    - port: 9091
      protocol: TCP
      name: second
---
kind: Service
apiVersion: v1
metadata:
  name: published-service-load-balancer
  namespace: default
  labels:
    app: traefik
spec:
  type: LoadBalancer
  ports:
    - port: 9090
      protocol: TCP
      name: first
    - port: 9091
      protocol: TCP
      name: second
status:
  loadBalancer:
    ingress:
      - ip: 5.6.7.8
        ports:
          - port: 9090
            protocol: TCP
          - port: 9091
            protocol: TCP
---
kind: Node
apiVersion: v1
metadata:
  name: node1
status:
  addresses:
    - type: ExternalIP
      address: 9.10.11.12
---
kind: Service
apiVersion: v1
metadata:
  name: published-service-node-port
  namespace: default
  labels:
    app: traefik
spec:
  type: NodePort
  ports:
    - port: 9190
      protocol: TCP
      name: first
      nodePort: 9090
    - port: 9191
      protocol: TCP
      name: second
      nodePort: 9091
---
kind: Service
apiVersion: v1
metadata:
  name: published-service
  namespace: default
  labels:
    app: traefik
spec:
  type: ExternalName
  externalName: example.com
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: foo
  namespace: default
spec:
  rules:
  - host: "*.foo.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: service1
            port:
              number: 80
---
kind: Service
apiVersion: v1
metadata:
  name: service-non-published
  namespace: default
spec:
  type: ClusterIP
  externalIPs:
    - 1.2.3.4
  ports:
    - port: 9090
      protocol: TCP
      name: first
    - port: 9091
      protocol: TCP
      name: second
